--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
     container_name: backend
     environment:
       - PORT=8081
+      - DEEZER_USER_ID=1703362
     networks:
       - musical-sync-network
     restart: unless-stopped
